Bug 413180 - Kalzium claims all elements were "known to ancient cultures".
Summary: Kalzium claims all elements were "known to ancient cultures".
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-19 10:57 UTC by Kevin Kofler
Modified: 2019-10-24 17:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Kofler 2019-10-19 10:57:03 UTC
SUMMARY
No matter for what element I display the information, it always claims "This element was known to ancient cultures."

STEPS TO REPRODUCE
1. Start Kalzium.
2. Click on any element. Even ones clearly discovered in modern times, such as Astatine.
3. Select the Miscellaneous tab.

OBSERVED RESULT
"This element was known to ancient cultures."

EXPECTED RESULT
The discovery date is shown.

SOFTWARE/OS VERSIONS
Windows: no
macOS: no
Linux/KDE Plasma: Fedora 29
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.59.0
Qt Version: 5.11.3
kalzium-18.12.2-1.fc29.x86_64
Comment 1 Karl Ove Hufthammer 2019-10-24 17:16:47 UTC
Git commit 242b7b7346c6f0086abd1f8919a31e847688c21b by Karl Ove Hufthammer.
Committed on 24/10/2019 at 17:16.
Pushed by huftis into branch 'Applications/19.08'.

Give correct information about the year of discovery

Because the wrong variable was used for the year of discovery,
Kalzium claimed that *all* elements were known to ancient cultures.

M  +2    -3    src/kalziumutils.cpp

https://commits.kde.org/kalzium/242b7b7346c6f0086abd1f8919a31e847688c21b
Comment 2 Karl Ove Hufthammer 2019-10-24 17:28:54 UTC
Git commit cb97b7760f3d0bc5baa782dae1d756ae20cfa56b by Karl Ove Hufthammer.
Committed on 24/10/2019 at 17:26.
Pushed by huftis into branch 'master'.

Give correct information about the year of discovery

Because the wrong variable was used for the year of discovery,
Kalzium claimed that *all* elements were known to ancient cultures.

M  +2    -3    src/kalziumutils.cpp

https://commits.kde.org/kalzium/cb97b7760f3d0bc5baa782dae1d756ae20cfa56b