Give correct information about the year of discovery

Because the wrong variable was used for the year of discovery,
Kalzium claimed that *all* elements were known to ancient cultures.

BUG: 413180